Update Montillano - (Morgana's Cafe).html

--- a/Morgana's/Montillano - (Morgana's Cafe).html
+++ b/Morgana's/Montillano - (Morgana's Cafe).html
@@ -25,11 +25,11 @@
 
 <div id="banner-fade">
 <center>
-<img src="C:\Users\UDMCL3-14\OneDrive\Desktop\Absolute Shaw!\Morgana's Cafe Caramel.jpg" width="320" height="240" title="Morgana's Cafe Caramel @ 59">
-<img src="C:\Users\UDMCL3-14\OneDrive\Desktop\Absolute Shaw!\Morgana's Americano.jpeg" width="320" height="240" title="Morgana's Americano @ 69">
-<img src="C:\Users\UDMCL3-14\Downloads\Morgana's Café.png" width="400" height="300" title=Visit Morgana's Café>
-<img src="C:\Users\UDMCL3-14\OneDrive\Desktop\Absolute Shaw!\Morgana's Espresso.jpg" width="320" height="240" title="Morgana's Espresso @ 89">
-<img src="C:\Users\UDMCL3-14\OneDrive\Desktop\Absolute Shaw!\Morgana's Latte.jpg" width="320" height="240" title="Morgana's Latté @99">
+<img src="Caramel.jpg" width="320" height="240" title="Morgana's Cafe Caramel @ 59">
+<img src="Americano.jpeg" width="320" height="240" title="Morgana's Americano @ 69">
+<img src="Morgana's Café.png" width="400" height="300" title=Visit Morgana's Café>
+<img src="Espresso.jpg" width="320" height="240" title="Morgana's Espresso @ 89">
+<img src="Latte.jpg" width="320" height="240" title="Morgana's Latté @99">
 </center>
 
 <!DOCTYPE html>
@@ -64,4 +64,5 @@
 </center>
 
 </body>
+
 </html>
