Update Montillano - (Morgana's Cafe).html

--- a/Morgana's/Montillano - (Morgana's Cafe).html
+++ b/Morgana's/Montillano - (Morgana's Cafe).html
@@ -26,8 +26,8 @@
 <div id="banner-fade">
 <center>
 <img src="Caramel.jpg" width="320" height="240" title="Morgana's Cafe Caramel @ 59">
-<img src="Americano.jpeg" width="320" height="240" title="Morgana's Americano @ 69">
-<img src="Morgana's Café.png" width="400" height="300" title=Visit Morgana's Café>
+<img src="Americano.jpg" width="320" height="240" title="Morgana's Americano @ 69">
+<img src="Morgana's Café.jpg" width="400" height="300" title=Visit Morgana's Café>
 <img src="Espresso.jpg" width="320" height="240" title="Morgana's Espresso @ 89">
 <img src="Latte.jpg" width="320" height="240" title="Morgana's Latté @99">
 </center>
@@ -66,3 +66,4 @@
 </body>
 
 </html>
+
