Morgana's Americano.html

--- a/Morgana's/Morgana's Americano.html
+++ b/Morgana's/Morgana's Americano.html
@@ -20,9 +20,10 @@ Morgy<p>
 
 <center>
 
-<A HREF="Montillano (Morgana's Cafe).html">Back To Main Page<p></A>
+<A HREF="index.html">Back To Main Page<p></A>
 
 </BODY>
 
 
 </HTML>
+
