Morgana's Espresso.html

--- a/Morgana's/Morgana's Espresso.html
+++ b/Morgana's/Morgana's Espresso.html
@@ -10,7 +10,7 @@
 <center>
 
 <p>
-<img src="C:\Users\UDMCL3-14\OneDrive\Desktop\Absolute Shaw!\Morgana's Espresso.jpg" height="300" alt="Morgana's Espresso">
+<img src="Espresso.jpg" height="300" alt="Espresso">
 <p>
 
 "Experience the soul of coffee in a single, perfect sip. Morgana's Espresso is a rich, complex blend crafted for a deep and satisfying flavor. We meticulously select and roast our beans to achieve a perfect balance of intense, bittersweet notes and a subtle, lingering sweetness. Served with a beautiful, reddish-brown crema, each shot is a testament to quality and passion. At Morgana's, we believe the simplest things are often the most profound, and our espresso is proof." <P>
@@ -20,8 +20,9 @@ Morgy<p>
 
 <center>
 
-<A HREF="C:\Users\UDMCL3-14\OneDrive\Desktop\Absolute Shaw!\New Montillano (Morgana's Cafe).html">Back To Main Page<p></A>
+<A HREF="index.html">Back To Main Page<p></A>
 
 </BODY>
+
 
 </HTML>
