Morgana's Latte.html

--- a/Morgana's/Morgana's Latte.html
+++ b/Morgana's/Morgana's Latte.html
@@ -10,7 +10,7 @@
 <center>
 
 <p>
-<img src="Morgana's Latte.jpg" height="300" alt="Morgana's Latte">
+<img src="Latte.jpg" height="300" alt="Latte">
 <p>
 
 "Morgana's Latte is a perfect harmony of art and flavor. We start with a shot of our rich, beautifully balanced espresso and then expertly steam creamy milk to a velvety texture. This creates a smooth, sweet foundation that perfectly complements the coffee's bold notes. Each latte is finished with a delicate layer of microfoam, ready for a touch of classic latte art. It's the ultimate blend of warmth, comfort, and quiet elegance in a cup." <P>
@@ -26,3 +26,4 @@ Morgy<p>
 
 
 </HTML>
+
