Morgana's Americano.html

--- a/Morgana's/Morgana's Americano.html
+++ b/Morgana's/Morgana's Americano.html
@@ -10,7 +10,7 @@
 <center>
 
 <p>
-<img src="Americano.jpg" height="300" alt="Morgana's Americano">
+<img src="Americano.jpg" height="300" alt="Americano">
 <p>
 
 "Step into a world of golden sweetness at Morgana's Caramel Cafe. We specialize in handcrafted treats and rich, aromatic coffee, all with a touch of our signature caramel. From our velvety caramel lattes to decadent cakes drizzled with our house-made sauce, every bite and sip is designed to be a moment of pure bliss. Settle into our cozy, sun-drenched space and let the warm, sweet aroma envelop you. At Morgana's, we're not just serving coffee and dessert; we're creating a cozy retreat where every caramel lover feels right at home." <P>
@@ -26,4 +26,5 @@ Morgy<p>
 
 
 </HTML>
+
 
