--- a/Morgana's/index.html
+++ b/Morgana's/index.html
@@ -27,7 +27,7 @@
 <center>
 <img src="Caramel.jpg" width="320" height="240" title="Morgana's Cafe Caramel @ 59">
 <img src="Americano.jpg" width="320" height="240" title="Morgana's Americano @ 69">
-<img src="Morgana's Café.jpg" width="400" height="300" title=Visit Morgana's Café>
+<img src="Morgana's Cafe.jpg" width="400" height="300" title=Visit Morgana's Cafe>
 <img src="Espresso.jpg" width="320" height="240" title="Morgana's Espresso @ 89">
 <img src="Latte.jpg" width="320" height="240" title="Morgana's Latté @99">
 </center>
@@ -66,4 +66,5 @@
 </body>
 
 </html>
+
 
